# OSS-KVM-Manager

./: LOCAL.md  README.md
_api_client_/Projeto 1/: bruno.json  collection.bru
_api_client_/Projeto 1/API/: CSRF.bru  folder.bru
_api_client_/Projeto 1/Agent/: folder.bru
_api_client_/Projeto 1/environments/: Projeto 1.bru
agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent/src/: USEFUL.md  server.py
agent/src/libs/cloudimgs/: check.py
agent/src/libs/crypto/: crypto.py
agent/src/libs/virt/: clone_cloudimg.py  cloud_init.py  connection.py  create.py  format.py  get_pool_dir.py  helpers.py  list.py
agent/src/libs/virt/templates/: network_template.xml  storage_pool_template.xml  vm_disk_template.xml  vm_template.xml
agent/src/libs/virt/templates/cloud_init/: meta_template.yaml  networking_template.yaml  user_keys_template.yaml  user_pwd_template.yaml
agent/src/libs/virt/templates/macos/: vm_template.xml
agent/src/models/: create_vm.py  finalize_vm.py  format_vm.py
agent/src/routes/: health.py  info.py  key.py  routes.py  uuid.py
agent/src/routes/vms/: __init__.py  status.py
setups/: QEMU.md  README.md  agent.sh
setups/agent/: agent.service  agent.sh  agent_v2.sh  tailscale.md
web/api/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
web/api/prisma/: schema.prisma
web/api/src/: server.ts
web/panel/: example.env  next.config.ts  package-lock.json  package.json  tsconfig.json
web/panel/locales/: en.json  pt.json
web/panel/src/: proxy.ts
(+181 files in other folders)
